Fixed issue with wrong positioning of images

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,7 +5,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  position: relative;
+  /* position: relative; */
   font-weight: normal;
 }
 
