--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,7 +31,7 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    /* grid-template-columns: 1fr; */
     padding: 0;
   }
 }
